[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/poop.png" type="Texture" id=1]
[ext_resource path="res://Poop.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 4, 3 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[node name="Poop" type="RigidBody2D"]
z_index = 50
collision_layer = 0
collision_mask = 3
mass = 10.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 28.07
initial_velocity_random = 0.8
color = Color( 0.529412, 0.341176, 0.2, 1 )
hue_variation = 0.17
hue_variation_random = 0.46

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 3
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 0.3
local_coords = false
texture = SubResource( 2 )
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 30.0
angular_velocity = 267.79
angular_velocity_random = 0.46
color_ramp = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
